myapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
  containers:
  - name: init-container
    image: busybox  
    command: ['sh', '-c', 'npm install && pip install -r requirements.txt']
    volumeMounts:
    - name: app-volume
      mountPath: /app
  - name: main-container
    image: nginx:latest
    volumeMounts:
    - name: app-volume
      mountPath: /app
  volumes:
  - name: app-volume
    emptyDir: {}
