ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: sandesh
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: google.com  
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: nginx-service  
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: nginx-service 
            port:
              number: 80
