nginx-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-sandesh
  namespace: sandesh
spec:
  podSelector:
    matchLabels:
      app: nginx
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: sandesh  # Specify the target namespace
